# stellar_university

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STELLARU_PLAN.md  index.html  middleware.ts  next.config.ts  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: CredentialCard.tsx
contracts/: Cargo.toml
contracts/anchor/: Cargo.toml
contracts/anchor/src/: lib.rs
contracts/course_registry/: Cargo.toml
contracts/course_registry/src/: lib.rs
contracts/credential/: Cargo.toml
contracts/credential/src/: lib.rs
contracts/enrollment/: Cargo.toml
contracts/enrollment/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/grading/: Cargo.toml
contracts/grading/src/: lib.rs
contracts/identity/: Cargo.toml
contracts/identity/src/: lib.rs
contracts/scholarship/: Cargo.toml
contracts/scholarship/src/: lib.rs
contracts/student_registry/: Cargo.toml
contracts/student_registry/src/: lib.rs
contracts/tuition/: Cargo.toml
contracts/tuition/src/: lib.rs
data/: constants.ts  courses.ts  faculties.ts  timetable.ts
docs/: architecture.md  contracts.md  deployment.md  sdk.md
hooks/: useAnnouncements.ts  useCredentials.ts  useFees.ts  useGrades.ts  useScholarship.ts  useStudent.ts
lib/: auth.ts  cache.ts  contracts.ts  credential.ts  governance.ts  ipfs.ts  logger.ts  pdf.ts  rateLimit.ts  stellar.ts  utils.ts  wallet.ts
prisma/: schema.prisma
scripts/: deploy.sh  init-contracts.sh  seed-courses.ts  verify-deployment.sh
types/: index.ts
(+67 files in other folders)
