[workspace]
members = [
    "student_registry",
    "course_registry",
    "enrollment",
    "tuition",
    "grading",
    "credential",
    "scholarship",
    "governance",
    "identity",
    "anchor",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.5.0", features = ["alloc"] }

[profile.release]
opt-level     = "z"
overflow-checks = true
debug         = 0
strip         = "symbols"
debug-assertions = false
panic         = "abort"
codegen-units = 1
lto           = true

[profile.release-with-logs]
inherits      = "release"
debug-assertions = true
